@@ -57,6 +57,9 @@ using only the libmongoc public API:
 mongoc_client_get_database_names no longer filters out a replica set member's
 "local" database.
 
+mongoc_client_get_gridfs now ensures the proper indexes on the files and chunks
+collections.
+
 mongo-c-driver 1.3.3
 ====================
 
